2026-02-16T02:42:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22048314646 # 879
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 55 639
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-14T02:32:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22009562026 # 877
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 55 639
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 55 639
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-29] / []

2026-02-13T02:46:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21972677151 # 876
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 55 639
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28] / [2026-02-10]

2026-02-11T02:49:54Z: